<resources>
    <string name="app_name">UWA Timetable</string>
    <string name="divider" translatable="false">-</string>
    <string name="unit">Unit</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="type">Type</string>
    <string name="venue">Venue</string>
    <string name="description">Unit Description</string>
    <string name="stream">Stream</string>
    <string name="weeks">Weeks</string>
    <string name="entry_id">Entry ID</string>
    <string name="day">Day</string>
    <string name="readFromCAS">Read from CAS</string>
    <string name="reset_range">Reset Range</string>
    <string name="clearDatabase">Clear Database</string>
    <string name="title_clearDatabase">Clear Database?</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="title_reading_from_cas">Read Data from CAS</string>
    <string name="progress_reading_from_cas">Reading data from CAS. Please wait…</string>
    <string name="hint_range">Select Range</string>
    <string name="title_timetable_detail">Details</string>
    <string name="no_extra_detail_available">No extra details available.</string>
    <string name="search_on_uwa">Search on UWA</string>
    <string name="search_for_venue">Search for the venue</string>
    <string name="search_for_unit">Search for the unit code</string>
    <string name="unit_details">Unit Details</string>
    <string name="database_details">Database Details</string>
    <string name="date_details">Date Details</string>
    <string name="yyyyMMdd">(yyyy/MM/dd)</string>

    <string-array name="day_spinner_array" >
        <item>All Days</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Weekend</item>
    </string-array>

    <string-array name="week_spinner_array" >
        <item>All Weeks</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
    </string-array>
</resources>
