<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/cardview_default_margin"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/entry_cardview_inset_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/unit_details"
            android:paddingBottom="@dimen/entry_vertical_padding" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/entry_vertical_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit"
                android:id="@+id/unit"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:id="@+id/day"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:id="@+id/description"
                style="@style/Base.TextAppearance.AppCompat.Medium" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/type"
                style="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:paddingLeft="@dimen/entry_text_padding"
                android:paddingRight="@dimen/entry_text_padding"
                style="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:id="@+id/stream"
                style="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/entry_vertical_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                android:id="@+id/venue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divider"
                android:paddingLeft="@dimen/entry_text_padding"
                android:paddingRight="@dimen/entry_text_padding"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:id="@+id/end" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>