<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/cardview_default_margin"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/entry_cardview_inset_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/search_on_uwa"
            android:paddingBottom="@dimen/entry_vertical_padding"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_venue"
            android:paddingBottom="@dimen/entry_vertical_padding"
            android:id="@+id/search_venue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_unit"
            android:id="@+id/search_unit" />

    </LinearLayout>
</android.support.v7.widget.CardView>